--- a/SafeBuy.repositorio/SafeBuy.repositorio.csproj
+++ b/SafeBuy.repositorio/SafeBuy.repositorio.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SafeBuy.Dominio\SafeBuy.Dominio.csproj" />
+  </ItemGroup>
+
 </Project>
