--- a/SafeBuy.Web/ClientApp/package.json
+++ b/SafeBuy.Web/ClientApp/package.json
@@ -32,7 +32,7 @@
     "popper.js": "^1.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.0",
+    "@angular-devkit/build-angular": "^0.6.8",
     "@angular/cli": "~6.0.0",
     "@angular/compiler-cli": "6.1.10",
     "@angular/language-service": "^6.0.0",
@@ -47,6 +47,7 @@
     "karma-coverage-istanbul-reporter": "~1.4.2",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "ng2-truncate": "^1.3.17",
     "typescript": "~2.7.2"
   },
   "optionalDependencies": {
